Reorganización y mejora profunda del repositorio
REORGANIZACIÓN DE ESTRUCTURA:
- Movidos documentos a docs/exercises/ y docs/guides/
- Movidos scripts a scripts/setup/, scripts/demo/, scripts/analysis/
- Archivados archivos redundantes en .archive/ (ignorado por git)
- README.md actualizado con nueva estructura clara

MEJORAS EN EJERCICIOS (docs/exercises/EJERCICIOS_PROGRESIVOS.md):
- Eliminadas todas las referencias de tiempo
- Agregada teoría detallada en cada ejercicio
- Explicaciones profundas de cada comando y parámetro
- Ejercicios prácticos mejorados con análisis de seguridad

EJERCICIO 1 - Explorando PCAPs:
- Teoría: Estructura PCAP, tshark vs Wireshark
- Frame Control field 802.11 explicado
- SSID vs BSSID detallado
- Direcciones MAC en WiFi (4 campos de dirección)
- Ejercicios prácticos con análisis de EAPOL

EJERCICIO 2 - Frames WiFi Básicos:
- Teoría: Arquitectura 802.11 completa
- Diagrama de proceso de conexión (7 pasos)
- Tipos de frames: Management, Control, Data
- Probe requests y privacidad del usuario
- Authentication vs Association explicado
- AID (Association ID) y su propósito
- Script de reconstrucción de secuencia completa

EJERCICIO 3 - DHCP:
- Teoría: Proceso DORA detallado
- Estructura de cada mensaje DHCP
- Transaction ID y empareamiento de mensajes
- Lease time, T1 (renewal), T2 (rebinding)
- Todas las opciones DHCP explicadas
- Vulnerabilidades: DHCP Spoofing, Starvation, Snooping
- Script completo de análisis con reporte de seguridad

NUEVO ARCHIVO:
- PROYECTO_RESUMEN.md: Resumen ejecutivo completo del laboratorio

README.md MEJORADO:
- Estructura del proyecto actualizada y clara
- Instrucciones de instalación con nuevas rutas
- Secciones de demos del laboratorio
- Enlaces actualizados a nueva organización

.gitignore ACTUALIZADO:
- Agregado .archive/ para ignorar archivos históricos

Total de mejoras:
- EJERCICIOS_PROGRESIVOS.md: 1111 → 1466 líneas (+32%)
- Teoría agregada: ~15KB de contenido educativo nuevo
- Scripts mejorados con co

--- a/.gitignore
+++ b/.gitignore
@@ -69,3 +69,6 @@ hashcat.potfile
 # Captura personal (no subir capturas propias)
 my_captures/
 private/
+
+# Archivos archivados (histórico del desarrollo)
+.archive/
